[tool.poetry]
name = "microapp"
version = "0.1.0"
description = ""
authors = ["Bekhzod <bekhzod.tillakhanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.21.0"
httpx = "^0.23.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
databases = {extras = ["asyncpg"], version = "^0.6.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
